# Armadillo

./: CMakeLists.txt  README.md  TerminalFormatting.h  armadillo.cpp  build.bat  exampleOfPipe.cpp  path.h  redCerr.h
cmd/: aliases.config  customList.config
cmd/builtin/: BuiltinInfo.txt  alias.cpp  cd.cpp  cmd.cpp  echo.cpp  help.cpp  man.cpp
cmd/builtin/headers/: alias.h  cd.h  cmd.h  echo.h  help.h  man.h
cmd/builtin/manuals/: alias.txt  cd.txt  clear.txt  cmd.txt  echo.txt  exit.txt  help.txt  man.txt
cmd/commandSkeleton/: manual.txt
cmd/custom/example/: example.cpp  example.h  manual.txt
cmd/standard/cat/: cat.cpp  manual.txt
cmd/standard/cp/: cp.cpp  manual.txt
cmd/standard/date/: date.cpp  manual.txt
cmd/standard/edit/: edit.cpp  edit.h  manual.txt
cmd/standard/example2/: example2.cpp
cmd/standard/find/: find.cpp  find.h  manual.txt
cmd/standard/grep/: grep.cpp  manual.txt
cmd/standard/ls/: ls.cpp  manual.txt
cmd/standard/mkdir/: manual.txt  mkdir.cpp
cmd/standard/ps/: manual.txt  ps.cpp
cmd/standard/pwd/: manual.txt  pwd.cpp
cmd/standard/rm/: manual.txt  rm.cpp
cmd/standard/sys/: manual.txt  sys.cpp
cmd/standard/touch/: manual.txt  touch.cpp
commonFunctions/: bytesToReadableString.h  drainPipe.h  getTextFile.h  handleIO.h  isStringInFile.h  listToString.h  makePipe.h  removeQuotes.h  separateStringVectorBySubstrings.h  separateTokensByToken.h  stringManipulation.h  stripWhitespace.h  writeToPipe.h
configurations/: aliases.config  builtinList.config  standardList.config
handlers/: andHandler.cpp  commandHandler.cpp  embeddedHandler.cpp  handleHandler.h  inputHandler.cpp  pipeHandler.cpp  redirectionHandler.cpp
handlers/headers/: andHandler.h  commandHandler.h  embeddedHandler.h  inputHandler.h  pipeHandler.h  redirectionHandler.h
resources/: ardoASCII.h  armadilloASCII.txt  armadilloLogo.txt
